@@ -4,6 +4,7 @@ Release date: July 11, 2023
 * Enhancement: Removed CSS & JS related to slick slider
 * Fixed: Team Member Carousel - Images were not appearing in the editor
 * Fixed: Team Member Carousel - Arrow style options were not working
+* Fixed: Info Box Carousel - Images were not appearing in the editor
 
 == 2.7.7 ==
 Release date: June 21, 2023
